fix some grammar mistakes

--- a/4_analogs/2_examples.tex
+++ b/4_analogs/2_examples.tex
@@ -72,7 +72,7 @@ Bongsoo Suh, Eun Soo Choi представили технологію \cite{suh}
 
 \section{Відокремлення написів дошки}
 У 2014 році науковці з Тайванського університету представили свій алгоритм \cite{yeh}
-оцифровування дошки (рис. \ref{fig:yeh}). Для видалення викладача автори застосували
+оцифровування дошки (рис. \ref{fig:yeh}). Для видалення викладача, автори застосували
 алгоритм кластеризації k-means. Для отримання бінаризованих написів з дошки
 використане адаптивне вирівнювання. Варто відмітити гарну
 якість власного методу зменшення шуму.
@@ -89,8 +89,8 @@ Bongsoo Suh, Eun Soo Choi представили технологію \cite{suh}
   }
 \end{figure}
 Автори не надали час обробки всього відео. Щоб отримати якісну сегментацію
-дошки та викладача, потрібно, щоб кадр містив не тільки викладача, причому одяг викладача
-має бути сильно відмінним від кольору дошки. Це потрібно для коректної роботи алгоритму k-means.
+дошки та викладача, потрібно, щоб кадр містив не просто викладача, а викладача з кольором одягу 
+сильно відмінним від кольору дошки. Це потрібно для коректної роботи алгоритму k-means.
 Тому немає гарантії, що якийсь рухомий об'єкт не буде класифікований як дошка під час класифікації.
 
 \section{Сучасна робота}
@@ -111,13 +111,13 @@ Bongsoo Suh, Eun Soo Choi представили технологію \cite{suh}
     \label{fig:davila:2017}
   }
 \end{figure}
-Пізніше ці ж автори створили повністю згорткову нейронну мережу \cite{davila:2021}
+Пізніше, ці ж автори створили повністю згорткову нейронну мережу \cite{davila:2021}
 для обробки написів дошки. Дана нейронна мережа LectureNet досить добре бінаризує написи з дошки
 (рис. \ref{fig:davila:2021}).
 \begin{figure}[H]
   \centering
   \includegraphics[width=0.8\textwidth]{images/davila_2021}
-  \caption{Приклад роботи авторів з Рочестер}
+  \caption{Приклад роботи авторів з Рочестер \cite{davila:2021}} 
   \label{fig:davila:2021}
 \end{figure}
 
