--- a/4_analogs/3_conclusion.tex
+++ b/4_analogs/3_conclusion.tex
@@ -13,5 +13,5 @@
 хоча сучасні недорогі смартфони дозволяють записувати відео
 розмірами $1920\times1080$, а більш дорогі моделі навіть $3840\times2160$,
 що помітно позначиться на швидкодії існуючих алгоритмів.
-Також жодний аналог не пропонує створювати панорамні знімки по мірі руху камери під
+Також, жодний аналог не пропонує створювати панорамні знімки по мірі руху камери під
 час зйомки.
