--- a/5_problem/2_problem.tex
+++ b/5_problem/2_problem.tex
@@ -11,7 +11,7 @@
 	      Багато відео лекцій записуються не в найкращих умовах.
 	      Камера може випадково затруситися, якщо її прикріпити до столу,
 	      де студенти пишуть лекцію, або може бути нестабільно закріплена.
-          Трясіння відео може заважати сприймати лекцію і фокусуватись на написах дошки.
+          Трясіння камери може заважати сприймати лекцію і фокусуватись на написах дошки.
 	\item
 	      Прибирання викладача.
 	      Є чимало методів вирішення цієї задачі. Можна локалізувати тільки
