--- a/5_problem/3_solution.tex
+++ b/5_problem/3_solution.tex
@@ -40,7 +40,7 @@
             ]
             \node [rblock]                           (video)        {Відео};
             \node [block, below=of video]            (mov_objects)  {Побудова маски\\
-                рухомих об’єктів або людини};
+                рухомих об'єктів або людини};
             \node [block, right=of mov_objects]      (pan)          {Побудова панорамами};
             \node [block, right=of pan]              (denoise)      {Зниження рівня\\ шуму};
             \node [rblock,above=of denoise]          (slides)       {Слайди};
@@ -59,12 +59,15 @@
 \section{Вхід алгоритму}
 Для опису алгоритму створення панорамних слайдів потрібно визначити та
 описати об'єкти, з якими взаємодіє інформаційна технологія.
-
-Дошка ~---~ це плоска поверхня, яку знімає камера. Це може бути крейдяна
+\begin{definition}
+    Дошка ~---~ це плоска поверхня, яку знімає камера. Це може бути крейдяна
 дошка, маркерна дошка, стіна тощо.
-
-Записи ~---~ це ті місця дошки, де відбулася зміна кольору, яка тривала
-відносно довгий час. Важливо зауважити, що ці записи мають бути
+\end{definition}
+\begin{definition}
+    Записи ~---~ це ті місця дошки, де відбулася зміна кольору, яка тривала
+відносно довгий час.
+\end{definition}
+Важливо зауважити, що ці записи мають бути
 саме у площині дошки, причому людина, яка проходить біля неї, не вважається
 зміною кольору, оскільки цей рух був не тривалим.
 
@@ -76,15 +79,22 @@
 проте бажано, щоб ці об'єкти були рухливими, щоб алгоритм виявлення рухомих
 об'єктів їх не додавав до слайдів.
 
-Кадром під номером $i$ шириною $w$ і висотою $h$ називаємо відображення
+\begin{definition}
+    Кадром під номером $i$ шириною $w$ і висотою $h$ називаємо відображення
 $P \to C$, де $P$ ~---~ множина координат пікселів, $C$ ~---~ скінченна множина можливих рівнів
 яскравостей (інтенсивностей) пікселів
 \begin{equation*}
-    P = [1, \ldots ,w]\times[1, \ldots, h], C \subset R
+    P = [1, \ldots ,w]\times[1, \ldots, h], C \subset R.
 \end{equation*}
-Відео \(F\) довжиною \(T\)
+\end{definition}
+
+\begin{definition}
+    Відео \(F\) довжиною \(T\)
 є послідовністю \(\left( F^{i}:i = \overline{1,T} \right)\) кадрів
-\(F^{i}:P \rightarrow C\). Той факт, що піксель з координатою
+\(F^{i}:P \rightarrow C\).
+\end{definition}
+
+Той факт, що піксель з координатою
 \(p \in P\) на кадрі \(F^{i}\) має інтенсивність \(c \in C\),
 позначатимемо \(F_{p}^{i} = c\).
 
