--- a/6_mask/2_bk_algorithm.tex
+++ b/6_mask/2_bk_algorithm.tex
@@ -6,7 +6,7 @@
 
 \subsection{Задача знаходження мінімального розрізу графа}
 
-Задача знаходження мінімального розрізу та еквівалентна задача пошуку максимального потоку
+Задачу знаходження мінімального розрізу та еквівалентна їй задачу пошуку максимального потоку
 можна описати на прикладі системи трубопроводу.
 Є мережа труб, кожна з яких має свою пропускну здатність і напрям.
 У даній мережі є джерело (початок мережі) та стік (кінець мережі).
@@ -14,8 +14,8 @@
 який може пройти з джерела у стік.
 
 Якщо дану концепцію перекласти на мову
-математики, то мережею труб є оріентований граф $G$ (рис. \ref{fig:graph_example})
-з множинами вузлів $T$ та множиною направлених ребер (ребер) $\tau$.
+математики, то мережею труб є орієнтований граф $G$ (рис. \ref{fig:graph_example})
+з множинами вузлів $T$ та множиною направлених ребер $\tau$.
 В ньому є джерело $s \in T$, стік $e \in T$, пропускні здатності $c_{tt'} \ge 0$
 та потоки $f_{tt'} \in \mathbb{R}$.
 Також позначимо множини вихідних $N_t = \{t^{'}: tt^{'} \in \tau \}$
@@ -61,11 +61,11 @@
 Як вже було зазначено,
 задача пошуку максимального потоку є еквівалентною до задачі пошуку мінімального розрізу.
 Даний висновок отримується з Max-Flow Min-Cut теореми \cite{ford_fulkerson,edmods_karp}.
-\begin{algorithm}[H]
+\begin{algorithm*}[H]
     \caption{Алгоритм (метод) Форда-Фалкерсона пошуку максимального потоку}
     \begin{algorithmic}
-        \State \textbf{Вхід:} граф $G$ з об'єктами $ t \in T $ і ребрами $tt^{'} \in \tau$
-        \State \textbf{Вихід:} $ F_{maxflow} $ - значення максимального потоку;
+        \State \textbf{Вхід:} граф $G$ з об'єктами $ t \in T $ і ребрами $tt^{'} \in \tau$.
+        \State \textbf{Вихід:} $ F_{maxflow} $ - значення максимального потоку.
         \State \textbf{Ініціалізація:} $ F_{maxflow} = 0, f_{tt^{'}}^{0} = 0 \quad \forall tt^{'}  \in \tau $.
         \State \textbf{Поки існує шлях з $s$ в $e$ повторюємо кроки 1,2:}
         \State \textbf{Крок 1:} Знаходимо шлях від $s$ до $e$ (пошуком в ширину чи в глибину).
@@ -86,16 +86,16 @@
         \State \qquad Якщо $c_{tt^{'}} \geqslant f_{tt^{'}}$ та $c_{tt^{'}} \geqslant 0$
         $\implies \theta_{t^{'}} = 1 $, інакше $\theta_{t^{'}} = 0 $
     \end{algorithmic}
-\end{algorithm}
+\end{algorithm*}
 
 У 2004 році Юрій Бойков та Володимир Колмогоров запропонували свій підхід \cite{boykov_kolmogorov}
 для пошуку мінімального розрізу на графі.
 Запропонована ідея методу полягає у нарощенні потоку у шляхах з джерела та стоку.
 Будується два дерева $S$ та $T$, коренями яких є $s$ та $t$ відповідно.
 Вершини загально діляться на ті що в $S$, $T$ та
-\textit{вільні}. Кожне дерево має \textit{активні} та \textit{внутрішні} вершини.
-Алгоритм Бойкова-Колмогорова (надалі Б-К алгоритм) складається зі стадій \textit{росту},
-\textit{доповнення} та \textit{всиновлення}.
+вільні. Кожне дерево має активні та внутрішні вершини.
+Алгоритм Бойкова-Колмогорова (надалі Б-К алгоритм) складається зі стадій росту,
+доповнення та всиновлення.
 Коротко розглянемо кожну з них.
 \begin{enumerate}
     \item \textbf{Стадія Росту.}
@@ -103,20 +103,20 @@
           вершини і додаємо їх як вершини, що відвідали. Після такого сканування вершини
           стають внутрішніми. Цей процес продовжується поки не залишиться не активної вершини.
     \item \textbf{Стадія Доповнення.}
-          На цій стадії потік вздовш шляху, що був знайдений на попередньому етапі,
-          доповнюється залишковою пропускною здатністю (англ. \textit{bottleneck}). Якщо ребра дерева стають
-          насиченими (пропускна здатність дорівнює потоку), найвіддаленіші вершини від коренів дерев стають
-          \textit{сиротами}, тобто, якщо вершини $t$ та $t^{'}$ додаються в множину $S$
-          і ребро $(t,t^{'})$ є насиченим, тоді $t^{'}$ називається \textit{$S$-сиротою}.
-          Аналогічно, якщо $t$ та $t^{'}$ знаходяться в дереві $T$, то  $t$ ~---~ \textit{$T$-сирота}.
-          Якщо ребро знаходиться в \textit{bottleneck} ($t$ в $S$, $t^{'}$ в $T$, ребро $(t,t^{'})$
+          На цій стадії потік вздовж шляху, що був знайдений на попередньому етапі,
+          доповнюється залишковою пропускною здатністю (англ. bottleneck). Якщо ребра дерева стають
+          насиченими (пропускна здатність дорівнює потоку), то найвіддаленіші вершини від коренів дерев стають
+          сиротами, тобто, якщо вершини $t$ та $t^{'}$ додаються в множину $S$
+          і ребро $(t,t^{'})$ є насиченим, тоді $t^{'}$ називається $S$-сиротою.
+          Аналогічно, якщо $t$ та $t^{'}$ знаходяться в дереві $T$, то  $t$ ~---~ $T$-сирота.
+          Якщо ребро знаходиться в bottleneck ($t$ в $S$, $t^{'}$ в $T$, ребро $(t,t^{'})$
           насичене) відповідно немає ніяких сиріт. Всі сироти потрапляють у множину сирот.
     \item \textbf{Стадія Всиновлення.}
           На даному етапі ми проходимось по кожній сироті в множині сирот для кожного дерева.
-          Нехай $t^{'}$ є \textit{$S$-сиротою}. Знаходимо всі такі $t$  в $S$, що
+          Нехай $t^{'}$ є $S$-сиротою. Знаходимо всі такі $t$  в $S$, що
           $(t, t^{'}) \in E$. Для кожного такого $t$ перевіряємо, чи шлях з $t$ в $s$ містить сирот,
           включаючи $t$. Якщо сирот не знайшли, то $t$ ~---~ батько  $t^{'}$.
-          Якщо не вдається знайти батька, ми позначаємо вершину $t^{'}$ як \textit{вільну}, а всіх
+          Якщо не вдається знайти батька, ми позначаємо вершину $t^{'}$ як вільну, а всіх
           дітей $t^{'}$ сиротами. Після цього ми оброблюємо залишкові ребра $(t,t^{'})$ і для кожного $t$ в $S$ позначаємо
           $t$ активною.
 \end{enumerate}
