--- a/6_mask/3_bk_algorithm_applying.tex
+++ b/6_mask/3_bk_algorithm_applying.tex
@@ -60,8 +60,8 @@
 \begin{align*}
     &q_{p}(B_{p}^{i}) =
       \begin{cases}
-        \alpha D_{p}^{i}, & \textit{якщо} B_{p}^{i} = 0, \\
-        255 - D_{p}^{i},  & \textit{якщо} B_{p}^{i} = 1 ,
+        \alpha D_{p}^{i}, & \textit{якщо} \quad B_{p}^{i} = 0, \\
+        255 - D_{p}^{i},  & \textit{якщо} \quad B_{p}^{i} = 1 ,
       \end{cases} \\
     &g(B_{p}^{i},B_{p'}^{i}) = \beta|B_{p}^{i} - B_{p'}^{i}|,
 \end{align*}
