--- a/7_panorama/2_frames_matching.tex
+++ b/7_panorama/2_frames_matching.tex
@@ -18,7 +18,7 @@
 
 \subsection{SIFT}
 
-У 1999 році англієць Девід Лоу представив алгоритм SIFT (Scale-invariant feature transform)
+У 1999 році англієць Девід Лоу представив алгоритм SIFT (scale-invariant feature transform)
 \cite{sift} (укр. масштабонезалежне перетворення ознак). Даний алгоритм
 застовується для знаходження ключових точок (локальних ознак) (англ. feature points, keypoints) зображення. 
 Метод досить точно і швидко знаходить дані точки.
@@ -27,7 +27,7 @@
 ректифікації стереопари та виявлення об'єктів.
 
 Ми можемо також використовувати дескриптори ознак, такі як SURF \cite{surf} або ORB \cite{orb}, 
-щоб знайти ключові точки. Був обраний SIFT, 
+щоб знайти ключові точки, але був обраний SIFT, 
 оскільки під час експериментів він надав візуально кращі результати, ніж 
 інші алгоритми.
 
@@ -46,7 +46,7 @@
           \begin{equation*}
               G(x,y,\sigma) = (1/2\pi\sigma^2)\exp({-(x^2+y^2)/2\sigma^2}).
           \end{equation*}
-          Будується різниця Ґауссіан (DoG метод) (Рис. \ref{fig:swift1}) з константою $k$
+          Будується різниця Ґауссіан (DoG метод) (рис. \ref{fig:swift1}) з константою $k$
           \begin{equation*}
               D(x,y,\sigma) = (L(x,y,k\sigma) - L(x,y,\sigma)).
           \end{equation*}
@@ -67,7 +67,7 @@
           \end{figure}
 
           \subitem Пошук локальних екстремумів. Для знаходження локальних екстремумів 
-          (Рис. \ref{fig:swift2}) зображення
+          (рис. \ref{fig:swift2}) зображення
           різниці ґауссіан якоїсь точки беруться 8 сусідів цього ж зображення і 9 зображення
           різниць зверху та знизу. Точка є екстремумом, якщо її значення більше або менше за
           значення всіх її сусідів.
@@ -82,9 +82,9 @@
 
           \subitem Частота вибірки по масштабу. Тут автор обґрунтовує кількість того, 
           скільки разів потрібно робити зміну масштабу зображення. 
-          Експерименти показують (Рис. \ref{fig:swift3}),
+          Експерименти показують (рис. \ref{fig:swift3}),
           що на даному етапі метод дає велику кількість кандидатів екстремумів,
-          і що дуже важко обрахувати їх всі.
+          і що дуже важко обрахувати їх всіх.
 
           \begin{figure}[H]
               \centering
@@ -114,8 +114,8 @@
                   \boldsymbol{x}^2}\frac{\partial D }{\partial \boldsymbol{x}}.
               \label{eq:extremum}
           \end{equation}
-          Підставивши \ref{eq:extremum} у \ref{eq:tailor_1}, маємо можливість відсіяти нестабільні
-          екстремуми по модулю значення (Рис. \ref{fig:sift45})
+          Підставивши \eqref{eq:extremum} у \eqref{eq:tailor_1}, маємо можливість відсіяти нестабільні
+          екстремуми по модулю значення (рис. \eqref{fig:sift45})
           \begin{equation*}
               D(\widehat{\boldsymbol{x}}) = D + \frac{1}{2}\frac{\partial D^{T} }{\partial \boldsymbol{x}}\widehat{\boldsymbol{x}}.
           \end{equation*}
@@ -185,8 +185,8 @@
 \begin{algorithm}[H]
     \caption{Алгоритм Brute Force Matcher}
     \begin{algorithmic}
-        \State \textbf{Вхід:} Множини дескрипторів $D^i$ та $D^{i+s}$
-        \State \textbf{Вихід:} Множина відповідних точок \(M^{i,i+s}\)
+        \State \textbf{Вхід:} множини дескрипторів $D^i$ та $D^{i+s}$.
+        \State \textbf{Вихід:} множина відповідних точок \(M^{i,i+s}\).
         \State \textbf{Ініціалізація:} Створюємо множину відповідних дескрипторів $D^{i,i+s}$
         \State $\forall i \in D^i$:
         \State  \qquad $h^{min}_{i,j} \gets 0$
