--- a/7_panorama/4_panorama_creating.tex
+++ b/7_panorama/4_panorama_creating.tex
@@ -33,8 +33,8 @@
 \begin{algorithm}[H]
     \caption{Створення панорами}
     \begin{algorithmic}
-        \State \textbf{Вхід:} Два кадри \(F^{i}\) та \(F^{i + s}\), поточна панорама \(W^{i}\) (\(W^{1} = F^{1}\))
-        \State \textbf{Вихід:} Панорама \(W^{i + s}\).
+        \State \textbf{Вхід:} два кадри \(F^{i}\) та \(F^{i + s}\), поточна панорама \(W^{i}\) (\(W^{1} = F^{1}\)).
+        \State \textbf{Вихід:} панорама \(W^{i + s}\).
 
         \textbf{Етап отримання відповідних точок}
 
