--- a/8_slides/2_slides_creating.tex
+++ b/8_slides/2_slides_creating.tex
@@ -16,7 +16,7 @@
 
 Для одержання маски всіх написів на дошці застосовуємо метод бінаризації
 Оцу . Це швидкий алгоритм, який на наш погляд дає прийнятну
-якість бінаризації для створення слайдів (Рис. 5).
+якість бінаризації для створення слайдів (рис. 5).
 
 Не кожна панорама є новим слайдом. Коли зміни на дошці невеликі
 (наприклад, лектор дописав формулу), треба лише оновити існуючий слайд.
@@ -25,8 +25,11 @@
 та отримувати слайди з новою інформацією на дошці, ми виділяємо нові
 написи за допомогою оператора Лапласа.
 
-Слайд ~---~ це та панорама \(W^{i}\), на якій відображено стан дошки
-напередодні стану з великою кількістю змін. Ми порівнюємо між собою не
+\begin{definition}
+  Слайд ~---~ це та панорама \(W^{i}\), на якій відображено стан дошки
+напередодні стану з великою кількістю змін.
+\end{definition}
+Ми порівнюємо між собою не
 кожну панораму, а пропускаємо вказану користувачем кількість \(q\)
 панорам. Оскільки розміри слайду \(W^{i}\) і панорами
 \(W^{i + s \cdot q}\) можуть бути різними, треба враховувати це у
@@ -42,5 +45,5 @@ $$y_{\min}^{'i} = \sum_{j = 1}^{q}{\min\left( y_{\min}^{i + s \cdot j},0 \right)
 \begin{equation*}
 \sum_{(x,y) \in P^{i}}^{}| L^{i}(x,y) - L^{i + s \cdot q}( x - x_{\min}^{'i},y - y_{\min}^{'i} ) | > t \cdot | P^{i + s \cdot q} |,
 \end{equation*}
-бінаризовану \(W^{i}\) та додаємо до списку слайдів, а в іншому випадку переходимо до
+бінаризовану \(W^{i}\) додаємо до списку слайдів, а в іншому випадку переходимо до
 перевірки слайду \(W^{i + s \cdot q}\).
