--- a/5_problem/4_conclusion.tex
+++ b/5_problem/4_conclusion.tex
@@ -3,5 +3,5 @@
 Зроблена постановка задачі створення слайдів. Описано ввідні 
 дані алгоритму та запропонована його блок-схема. 
 Таким чином, для створення інформаційної технології 
-потрібно вивчити методи локалізації людини або рухливих об'єктів,
+потрібно вивчити методи локалізації людини або рухливих об'єктів та
 зробити стабілізацію відео та панорамне склеювання кадрів. 
