--- a/7_panorama/3_homography_estimation.tex
+++ b/7_panorama/3_homography_estimation.tex
@@ -16,7 +16,7 @@
     H^{i} \cdot p_{j}^{i + s} = c \cdot p_{j}^{i},\quad\forall i = \overline{1,4\ }
     \label{eq:h_connection}
 \end{equation}
-Рівняння \ref{eq:h_connection} можна легко розв'язати відносно невідомої матриці
+Рівняння \eqref{eq:h_connection} можна легко розв'язати відносно невідомої матриці
 \(H^{i}\). Цю матрицю можна використати для компенсації руху камери
 ~---~ ми застосовуємо її до координат пікселів кадру номер \(i + s\), після
 чого точки зображення, отриманого в результаті перетворення, мають ті ж
@@ -24,10 +24,10 @@
 отримані координати не цілочисельні, їх можна округлити, що не матиме
 значного негативного впливу на якість результату.
 
-Знаходження $H$ вимагає знаходження всіх 9 параметрів матриці \ref{eq:h_matrix}.
+Знаходження $H$ вимагає знаходження всіх 9 параметрів матриці \eqref{eq:h_matrix}.
 Візьмемо пару відповідних точок $T$ та $T'$: $T = ((x_1,y_1,1), (x_2,y_2,1), 
 (x_3,y_3,1), (x_4,y_4,1)), T' = ((x'_1,y'_1,1), (x'_2,y'_2,1), (x'_3,y'_3,1), (x'_4,y'_4,1))$.
-Перепишемо \ref{eq:h_connection} у матричній формі для $T$ та $T'$.
+Перепишемо \eqref{eq:h_connection} у матричній формі для $T$ та $T'$.
 \begin{equation}
     \begin{bmatrix}
         x'_i\lambda \\
@@ -113,8 +113,8 @@
 \begin{algorithm}[H]
     \caption{Алгоритм знаходження гомографії за принципом RANSAC}
     \begin{algorithmic}
-        \State \textbf{Вхід:} $M^{i,i+s}$ - множина відповідних точок, $\varepsilon$ та $n$ - кількість ітерацій
-        \State \textbf{Вихід:} $H^{best}$ - найкраща матриця гомографії
+        \State \textbf{Вхід:} $M^{i,i+s}$ - множина відповідних точок, $\varepsilon$ та $n$ - кількість ітерацій.
+        \State \textbf{Вихід:} $H^{best}$ - найкраща матриця гомографії.
         \State $\forall i = \overline{1,n}$
         \State \quad 1. Вибираємо випадковим чином 4 пари відповідних точок $T$ та $T'$ з $M^{i,i+s}$.
         \State \quad 2. Обчислюємо $H$ по формулі \eqref{eq:honography_svd}
@@ -126,11 +126,11 @@
 
 \subsection{Обробка ключових точок з маскою}
 
-Ключові точки (Рис. \ref{fig:yakovlev:keypoints:a}), що дає нам дескриптор ознак SIFT, ми
+Ключові точки (рис. \ref{fig:yakovlev:keypoints:a}), що дає нам дескриптор ознак SIFT, ми
 використовуємо для оцінки гомографії, але також видаляємо ті ключові
 точки, які потрапляють в область маски рухомих об'єктів.
-Таким чином ми зменшуємо ймовірність того, що замість дошки алгоритм ``зачепиться'' за одяг
-викладача або інші рухомі об'єкти. На Рис. \ref{fig:yakovlev:keypoints:b} можна помітити, що
+Таким чином, ми зменшуємо ймовірність того, що замість дошки алгоритм ``зачепиться'' за одяг
+викладача або інші рухомі об'єкти. На рис. \ref{fig:yakovlev:keypoints:b} можна помітити, що
 існують точки, які насправді не належать рухомим об'єктам кадру
 \(F^{i + s}\), але були видалені. Це відбулось через те, що такі точки
 відповідають точкам з кадру \(F^{i}\), які в свою чергу лежать в межах маски рухомих об'єктів.
@@ -148,7 +148,7 @@
         \centering
         \includegraphics[width=\textwidth]{images/next_frame_matches_mask}
         \caption{Відповідні ключові точки на кадрі $F^{i+s}$, що залишились після
-            видалення тих точок, що попали в область маски рухомих
+            видалення тих точок, що потрапили в область маски рухомих
             об'єктів
             \label{fig:yakovlev:keypoints:b}
         }
